--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,14 @@ volumes:
   db_postgres:
 
 services:
-
   db:
-    container_name: postgres-nest-graphql
+    container_name: postgres
     image: postgres
     restart: always
     ports:
-      - "4321:4321"
+      - "5432:5432"
     environment:
-      POSTGRES_DB: postgres-graphql
-      POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
     volumes:
-      - db_postgres:/var/lib/postgresql/data
+      - db_postgres:/var/lib/postgresql/
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
