--- a/.development.env
+++ b/.development.env
@@ -1,2 +1,4 @@
-MONGO_USER=admin
-MONGO_PASSWORD=admin
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=postgres
+POSTGRES_PORT=5432
