--- a/package.json
+++ b/package.json
@@ -24,12 +24,18 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.0.3",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/mongoose": "^9.0.1",
+    "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
-    "mongoose": "^6.0.12",
+    "@nestjs/typeorm": "^8.0.2",
+    "apollo-server-express": "^3.4.0",
+    "class-transformer": "^0.4.0",
+    "graphql": "^15.7.2",
+    "pg": "^8.7.1",
+    "postgres": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
